Switch from LuaDoc to LDoc
LuaDoc never had C++ support, and is now listed as obsolete, directing
users to switch to LDoc, which has C++ support (if a few quirks of its
own).

Adds a make target api-dev to generate a developer's api documentation.
This includes internal functions and hooks that the user should not
touch directly.

(cherry picked from commit c5a959909e80cc170e753f1eda5c3e359903fa32)

--- a/crawl-ref/.gitignore
+++ b/crawl-ref/.gitignore
@@ -53,12 +53,11 @@ DEADJOE
 /docs/aptitudes-wide.txt
 /docs/FAQ.html
 /docs/crawl_manual.txt
+/docs/lua/
+/docs/develop/lua/
 
 # Doxygen documentation
 /source/html/
-
-# Luadoc stuff
-/source/luadoc/
 
 # Crawl generated junk
 arena.result
