--- a/crawl-ref/source/dat/species/ogre.yaml
+++ b/crawl-ref/source/dat/species/ogre.yaml
@@ -22,7 +22,8 @@ aptitudes:
   dodging: -1
   stealth: -2
   shields: -1
-  spellcasting: -1
+  unarmed_combat: -1
+  spellcasting: 1
   conjurations: -1
   hexes: -2
   charms: -1
