--- a/crawl-ref/source/dat/species/kobold.yaml
+++ b/crawl-ref/source/dat/species/kobold.yaml
@@ -33,6 +33,7 @@ levelup_stat_frequency: 5
 mutations:
   1:
     MUT_CARNIVOROUS: 1
+    MUT_NIGHTSTALKER: 3
 recommended_jobs:
   - JOB_HUNTER
   - JOB_BERSERKER
