Add support for minor tags > 255
Previous versions of crawl serialize the minor version as a single byte,
which prevents storing minor versions greater than 255. This commit adds
support for eventually moving to such minor versions: values greater
than 255 are stored as a byte equal to 255, and then the real minor
version as a four-byte big-endian integer.

This commit also consolidates some of the chunk tag reading and writing.
Most of the code for reading/writing various chunks directly accessed
bytes; this commit adds two helper functions for reading and writing
respectively.

This change is being added now because directly adding a four-byte
value, while possible, breaks the save browser, causing new games to not
be displayed at all in older crawl binaries. This change adds immediate
support for the save browser to read files with four-byte integer
minors, even though saves will continue to use a single byte. By the
time we reach minor 256 (perhaps around ~3 years at the current pace),
most binaries in the wild should be newer than this binary.

(cherry picked from commit 435769570560c5b0e48dffbc07f9cfd4c102d04c)

--- a/crawl-ref/source/Makefile.obj
+++ b/crawl-ref/source/Makefile.obj
@@ -300,6 +300,11 @@ windowmanager-sdl.o \
 glwrapper-ogl.o \
 fontwrapper-ft.o
 
+# XXX this is here because we pulled a change that added it to TEST_OBJECTS
+# and I don't want it to get lost - DJSD
+TEST_OBJECTS = \
+catch2-tests/test_files.o
+
 WEBTILES_OBJECTS = \
 tileweb.o \
 tileweb-text.o
