--- a/crawl-ref/source/dat/species/gnoll.yaml
+++ b/crawl-ref/source/dat/species/gnoll.yaml
@@ -1,7 +1,7 @@
 enum: SP_GNOLL
 monster: MONS_GNOLL
 name: "Gnoll"
-difficulty: Intermediate
+difficulty: Simple
 difficulty_priority: 10
 aptitudes:
   xp: 0
