Fixups for YAML species creation
Mostly to add MD/FD/HE and SPF_DWARVEN.

--- a/crawl-ref/source/dat/species/deep-dwarf.yaml
+++ b/crawl-ref/source/dat/species/deep-dwarf.yaml
@@ -6,6 +6,8 @@ adjective: "Dwarven"
 genus: "Dwarf"
 difficulty: Intermediate
 difficulty_priority: 20
+species_flags:
+  - dwarven
 aptitudes:
   xp: -1
   hp: 2
