--- a/crawl-ref/source/test/stress/qw.rc
+++ b/crawl-ref/source/test/stress/qw.rc
@@ -1093,6 +1093,7 @@ local scary_monsters = {
   {13, "blink frog"},
 
   {15, "death yak"},
+  {15, "Maud"},
   {15, "Erica"},
   {15, "catoblepas"},
   {15, "orc knight"},
