--- a/crawl-ref/source/dat/species/centaur.yaml
+++ b/crawl-ref/source/dat/species/centaur.yaml
@@ -49,6 +49,8 @@ levelup_stats:
   - dex
 mutations:
   1:
+    MUT_HERBIVOROUS: 1
+    MUT_FAST_METABOLISM: 1
     MUT_TOUGH_SKIN: 3
     MUT_FAST: 2
     MUT_DEFORMED: 1
